[gd_scene load_steps=19 format=3 uid="uid://be1l5kspsh8b6"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_dqeb6"]
[ext_resource type="Material" uid="uid://d0i3q6j44jwns" path="res://assets/Materials/FloorMat.tres" id="1_fvg1o"]
[ext_resource type="Script" path="res://scripts/RTSController.gd" id="1_rpve7"]
[ext_resource type="PackedScene" uid="uid://dy5pmuvdioedi" path="res://scenes/main_building.tscn" id="2_tya4q"]
[ext_resource type="Script" path="res://scripts/UnitSelector.gd" id="3_fk3c1"]
[ext_resource type="Texture2D" uid="uid://k7fnbofhk0c2" path="res://assets/GUI/DetailBar.png" id="5_55qjs"]
[ext_resource type="Script" path="res://scripts/GUIController.gd" id="5_ruh28"]
[ext_resource type="Texture2D" uid="uid://d2p1j6ypo4vf5" path="res://assets/GUI/MiniMap_Portrait.png" id="6_iwjt3"]
[ext_resource type="Texture2D" uid="uid://cligqukgffx0t" path="res://assets/GUI/SelectionBar.png" id="7_u8vom"]
[ext_resource type="Texture2D" uid="uid://bb8sf1tl1kjka" path="res://assets/GUI/WorkerImg.jpg" id="9_fmaq7"]
[ext_resource type="Texture2D" uid="uid://djhyxgkv3fwth" path="res://assets/GUI/MainBuildingImg.jpg" id="12_3mtlv"]
[ext_resource type="Texture2D" uid="uid://chdqssq55t7ta" path="res://assets/GUI/rock.png" id="14_d3v41"]

[sub_resource type="NavigationMesh" id="NavigationMesh_5iopb"]
vertices = PackedVector3Array(-7.75, 0.5, -12, -6.75, 0.75, -12, -6, 0.5, -14.25, -6, 0.5, -14.25, -4, 0.5, -14.25, -4.25, 0.5, -149.5, -7.75, 0.5, -12, -6, 0.5, -14.25, -4.25, 0.5, -149.5, -149.5, 0.5, -149.5, -149.5, 0.5, -11.5, -149.5, 0.5, -11.5, -7.75, 0.75, -11.5, -7.75, 0.5, -12, -4.25, 0.5, -149.5, -4, 0.5, -14.25, -2.5, 0.5, -14.25, -4.25, 0.5, -149.5, -2.5, 0.5, -14.25, -0.25, 0.5, -11, 149.5, 0.5, -11, 149.5, 0.5, -149.5, -3.75, 1.75, -12.5, -3, 1.75, -12.25, -3.25, 1.5, -13.25, -5.25, 1.5, -13, -5.25, 1.75, -12.25, -4.75, 1.75, -12.25, -6.25, 0.5, -9.25, -6.5, 1, -10.25, -7.25, 0.5, -10.25, -5, 0.5, -7.75, -5.25, 0.5, -9.25, -6.25, 0.5, -9.25, -5, 0.5, -7.75, -6.25, 0.5, -9.25, -7.25, 0.5, -10.25, -149.5, 0.5, -11.5, -7.25, 0.5, -10.25, -7.75, 0.75, -11.5, -149.5, 0.5, -11.5, -4.25, 0.5, -7.5, -5, 0.5, -7.75, -149.5, 0.5, -11.5, -149.5, 0.5, 149.5, -4.25, 0.5, 149.5, -0.5, 0.5, -10.25, -1.25, 0.5, -10.25, -1.5, 0.5, -9.25, -1.5, 0.5, -9.25, -3, 0.5, -9.25, -3.5, 0.5, -7.75, 149.5, 0.5, -11, -0.25, 0.5, -11, -0.5, 0.5, -10.25, 149.5, 0.5, -11, -0.5, 0.5, -10.25, -1.5, 0.5, -9.25, 149.5, 0.5, -11, -1.5, 0.5, -9.25, -3.5, 0.5, -7.75, 149.5, 0.5, -11, -3.5, 0.5, -7.75, -4.25, 0.5, -7.5, -4.25, 0.5, 149.5, 149.5, 0.5, 149.5)
polygons = [PackedInt32Array(2, 1, 0), PackedInt32Array(5, 4, 3), PackedInt32Array(7, 6, 8), PackedInt32Array(8, 6, 10), PackedInt32Array(8, 10, 9), PackedInt32Array(13, 12, 11), PackedInt32Array(16, 15, 14), PackedInt32Array(18, 17, 19), PackedInt32Array(19, 17, 20), PackedInt32Array(20, 17, 21), PackedInt32Array(24, 23, 22), PackedInt32Array(27, 26, 25), PackedInt32Array(28, 30, 29), PackedInt32Array(33, 32, 31), PackedInt32Array(35, 34, 36), PackedInt32Array(36, 34, 37), PackedInt32Array(40, 39, 38), PackedInt32Array(42, 41, 43), PackedInt32Array(43, 41, 45), PackedInt32Array(43, 45, 44), PackedInt32Array(48, 47, 46), PackedInt32Array(51, 50, 49), PackedInt32Array(54, 53, 52), PackedInt32Array(57, 56, 55), PackedInt32Array(60, 59, 58), PackedInt32Array(62, 61, 63), PackedInt32Array(63, 61, 64), PackedInt32Array(64, 61, 65)]

[sub_resource type="PlaneMesh" id="PlaneMesh_d1mbo"]
material = ExtResource("1_fvg1o")
size = Vector2(300, 300)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ehit1"]
data = PackedVector3Array(150, 0, 150, -150, 0, 150, 150, 0, -150, -150, 0, 150, -150, 0, -150, 150, 0, -150)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7iwm3"]

[sub_resource type="Sky" id="Sky_4race"]
sky_material = SubResource("ProceduralSkyMaterial_7iwm3")

[sub_resource type="Environment" id="Environment_boo4a"]
background_mode = 2
sky = SubResource("Sky_4race")
sdfgi_enabled = true
glow_enabled = true
volumetric_fog_enabled = true
volumetric_fog_density = 0.025
volumetric_fog_detail_spread = 4.28709
volumetric_fog_temporal_reprojection_amount = 0.99

[node name="World" type="Node3D"]
script = ExtResource("1_dqeb6")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_5iopb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="NavigationRegion3D"]
mesh = SubResource("PlaneMesh_d1mbo")

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D/MeshInstance3D" groups=["surface"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_ehit1")

[node name="Buildings" type="Node" parent="NavigationRegion3D"]

[node name="MainBuilding" parent="NavigationRegion3D/Buildings" instance=ExtResource("2_tya4q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.23789, 0, -11.186)

[node name="RTSController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.573576, 0.819152, 0, -0.819152, 0.573576, 0, 0, 0)
script = ExtResource("1_rpve7")

[node name="Camera3D" type="Camera3D" parent="RTSController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 17)

[node name="UnitSelector" type="Control" parent="RTSController"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_fk3c1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.341594, 0.939848, 0, -0.939848, -0.341594, 0, 0, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_boo4a")

[node name="Units" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUIController" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_ruh28")

[node name="InfoBar" type="TextureRect" parent="CanvasLayer/GUIController"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -545.0
offset_top = -261.0
offset_right = 545.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_55qjs")
expand_mode = 1

[node name="MiniMapContainer" type="TextureRect" parent="CanvasLayer/GUIController"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -400.0
offset_right = 400.0
offset_bottom = -20.0
grow_vertical = 0
texture = ExtResource("6_iwjt3")
expand_mode = 1

[node name="SelectionBar" type="TextureRect" parent="CanvasLayer/GUIController"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -408.0
offset_top = -266.0
offset_right = -18.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("7_u8vom")
expand_mode = 1

[node name="BuildingsGrid" type="GridContainer" parent="CanvasLayer/GUIController/SelectionBar"]
layout_mode = 0
anchor_left = 0.0615385
anchor_top = 0.1
anchor_right = 0.948718
anchor_bottom = 0.92
theme_override_constants/h_separation = 19
theme_override_constants/v_separation = 28
columns = 4
metadata/_edit_use_anchors_ = true

[node name="OptionButton1" type="TextureButton" parent="CanvasLayer/GUIController/SelectionBar/BuildingsGrid"]
custom_minimum_size = Vector2(72.5, 54.3)
layout_mode = 2
texture_normal = ExtResource("12_3mtlv")
ignore_texture_size = true
stretch_mode = 0

[node name="OptionButton2" type="TextureButton" parent="CanvasLayer/GUIController/SelectionBar/BuildingsGrid"]
custom_minimum_size = Vector2(72.5, 54.3)
layout_mode = 2
texture_normal = ExtResource("12_3mtlv")
ignore_texture_size = true
stretch_mode = 0

[node name="MainUnitImgContainer" type="TextureRect" parent="CanvasLayer/GUIController"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 440.0
offset_top = -227.0
offset_right = 640.0
offset_bottom = -53.0
grow_vertical = 0
expand_mode = 1

[node name="MainUnitImg" type="TextureRect" parent="CanvasLayer/GUIController/MainUnitImgContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_fmaq7")
expand_mode = 1

[node name="UnitsGrid" type="GridContainer" parent="CanvasLayer/GUIController"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -230.0
offset_right = 524.0
offset_bottom = -49.0004
grow_horizontal = 2
grow_vertical = 0
columns = 8

[node name="Minerals" type="VBoxContainer" parent="CanvasLayer/GUIController"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -270.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 189.0
grow_horizontal = 0
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/GUIController/Minerals"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("14_d3v41")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="CanvasLayer/GUIController/Minerals"]
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TestButtonContainer" type="HBoxContainer" parent="CanvasLayer/GUIController/Minerals"]
visible = false
layout_mode = 2

[node name="PlusButton" type="Button" parent="CanvasLayer/GUIController/Minerals/TestButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "+"

[node name="MinusButton" type="Button" parent="CanvasLayer/GUIController/Minerals/TestButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "-"

[connection signal="units_selected" from="RTSController" to="CanvasLayer/GUIController" method="_on_rts_controller_units_selected"]
[connection signal="pressed" from="CanvasLayer/GUIController/SelectionBar/BuildingsGrid/OptionButton1" to="CanvasLayer/GUIController" method="_on_option_button_1_pressed"]
[connection signal="pressed" from="CanvasLayer/GUIController/SelectionBar/BuildingsGrid/OptionButton2" to="CanvasLayer/GUIController" method="_on_option_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/GUIController/Minerals/TestButtonContainer/PlusButton" to="CanvasLayer/GUIController" method="_on_plus_button_pressed"]
[connection signal="pressed" from="CanvasLayer/GUIController/Minerals/TestButtonContainer/MinusButton" to="CanvasLayer/GUIController" method="_on_minus_button_pressed"]
